--- a/jpashop/src/main/resources/templates/members/createMemberForm.html
+++ b/jpashop/src/main/resources/templates/members/createMemberForm.html
@@ -9,14 +9,28 @@
 <body>
 <div class="container">
     <div th:replace="fragments/bodyHeader :: bodyHeader"/>
-    <form role="form" action="/members/new" th:object="${memberForm}"
-          method="post">
+    <form role="form" action="/members/new" th:object="${memberForm}" method="post">
+        <div class="form-group">
+            <label th:for="identifier">ID</label>
+            <input type="text" th:field="*{identifier}" class="form-control"
+                   placeholder="ID를 입력하세요"
+                   th:class="${#fields.hasErrors('identifier')}? 'form-control fieldError' : 'form-control'">
+            <p th:if="${#fields.hasErrors('identifier')}"
+               th:errors="*{identifier}">Incorrect date</p>
+        </div>
+        <div class="form-group">
+            <label th:for="password">PASSWORD</label>
+            <input type="text" th:field="*{password}" class="form-control"
+                   placeholder="PASSWORD를 입력하세요"
+                   th:class="${#fields.hasErrors('password')}? 'form-control fieldError' : 'form-control'">
+            <p th:if="${#fields.hasErrors('password')}"
+               th:errors="*{password}">Incorrect date</p>
+        </div>
         <div class="form-group">
             <label th:for="name">이름</label>
             <input type="text" th:field="*{name}" class="form-control"
                    placeholder="이름을 입력하세요"
-                   th:class="${#fields.hasErrors('name')}? 'form-control
-fieldError' : 'form-control'">
+                   th:class="${#fields.hasErrors('name')}? 'form-control fieldError' : 'form-control'">
             <p th:if="${#fields.hasErrors('name')}"
                th:errors="*{name}">Incorrect date</p>
         </div>
