--- a/jpashop/src/main/resources/templates/members/createMemberForm.html
+++ b/jpashop/src/main/resources/templates/members/createMemberForm.html
@@ -11,12 +11,12 @@
     <div th:replace="fragments/bodyHeader :: bodyHeader"/>
     <form role="form" action="/members/new" th:object="${memberForm}" method="post">
         <div class="form-group">
-            <label th:for="identifier">ID</label>
-            <input type="text" th:field="*{identifier}" class="form-control"
-                   placeholder="ID를 입력하세요"
-                   th:class="${#fields.hasErrors('identifier')}? 'form-control fieldError' : 'form-control'">
-            <p th:if="${#fields.hasErrors('identifier')}"
-               th:errors="*{identifier}">Incorrect date</p>
+            <label th:for="email">E-MAIL</label>
+            <input type="text" th:field="*{email}" class="form-control"
+                   placeholder="E-MAIL을 입력하세요"
+                   th:class="${#fields.hasErrors('email')}? 'form-control fieldError' : 'form-control'">
+            <p th:if="${#fields.hasErrors('email')}"
+               th:errors="*{email}">Incorrect date</p>
         </div>
         <div class="form-group">
             <label th:for="password">PASSWORD</label>
