--- a/jpashop/src/main/resources/templates/members/memberList.html
+++ b/jpashop/src/main/resources/templates/members/memberList.html
@@ -4,11 +4,10 @@
 <body>
 <div class="container">
   <div th:replace="fragments/bodyHeader :: bodyHeader" />
-  <div>
+  <div style="text-align: center">
     <table class="table table-striped">
       <thead>
       <tr>
-        <th>#</th>
         <th>이름</th>
         <th>도시</th>
         <th>주소</th>
@@ -17,14 +16,19 @@
       </thead>
       <tbody>
       <tr th:each="member : ${members}">
-        <td th:text="${member.id}"></td>
-        <td th:text="${member.name}"></td>
-        <td th:text="${member.address?.city}"></td>
-        <td th:text="${member.address?.street}"></td>
-        <td th:text="${member.address?.zipcode}"></td>
+        <td th:text="${member.username}"></td>
+        <td th:text="${member.city}"></td>
+        <td th:text="${member.street}"></td>
+        <td th:text="${member.zipcode}"></td>
       </tr>
       </tbody>
     </table>
+
+    <div class="btn-group me-2" role="group" aria-label="First group">
+      <th:block th:each = "i : ${#numbers.sequence(1,members.totalPages)}">
+        <a type="button" class="btn btn-outline-secondary" th:text="${i}" th:href="@{members(page=${i-1})}"></a>
+      </th:block>
+    </div>
   </div>
   <div th:replace="fragments/footer :: footer" />
 </div> <!-- /container -->
