--- a/jpashop/src/main/resources/templates/home.html
+++ b/jpashop/src/main/resources/templates/home.html
@@ -6,35 +6,35 @@
 </head>
 <body>
     <div class="container">
-    <div th:replace="fragments/bodyHeader :: bodyHeader" />
+        <div th:replace="fragments/bodyHeader :: bodyHeader"/>
 
-    <span th:text="${member.username}"></span>
-    <span>고객님 반갑습니다.</span>
-    <span>
-        <form action="/logout" method="post" style="float: right;">
-            <button type="submit" class="btn btn-outline-warning btn-sm">로그아웃</button>
-        </form>
-    </span>
+        <div style="margin-bottom:30px">
+            <span th:text="${member.username} "></span>
+            <span>고객님 반갑습니다.</span>
+            <form action="/logout" method="post" style="float: right;">
+                <button type="submit" class="btn btn-outline-warning btn-sm">로그아웃</button>
+            </form>
+        </div>
 
-    <div class="jumbotron">
-        <h1>HELLO SHOP</h1>
-        <p class="lead">회원 기능</p>
-        <p>
-            <a class="btn btn-lg btn-secondary" href="/members/new">회원 가입</a>
-            <a class="btn btn-lg btn-secondary" href="/members">회원 목록</a>
-        </p>
-        <p class="lead">상품 기능</p>
-        <p>
-            <a class="btn btn-lg btn-dark" href="/items/new">상품 등록</a>
-            <a class="btn btn-lg btn-dark" href="/items">상품 목록</a>
-        </p>
-        <p class="lead">주문 기능</p>
-        <p>
-            <a class="btn btn-lg btn-info" href="/order">상품 주문</a>
-            <a class="btn btn-lg btn-info" href="/orders">주문 내역</a>
-        </p>
-    </div>
+        <div class="jumbotron">
+            <h1>HELLO SHOP</h1>
+            <p class="lead">회원 기능</p>
+            <p>
+                <a class="btn btn-lg btn-secondary" href="/members/new">회원 가입</a>
+                <a class="btn btn-lg btn-secondary" href="/members">회원 목록</a>
+            </p>
+            <p class="lead">상품 기능</p>
+            <p>
+                <a class="btn btn-lg btn-dark" href="/items/new">상품 등록</a>
+                <a class="btn btn-lg btn-dark" href="/items">상품 목록</a>
+            </p>
+            <p class="lead">주문 기능</p>
+            <p>
+                <a class="btn btn-lg btn-info" href="/order">상품 주문</a>
+                <a class="btn btn-lg btn-info" href="/orders">주문 내역</a>
+            </p>
+        </div>
     <div th:replace="fragments/footer :: footer" />
-</div> <!-- /container -->
+    </div> <!-- /container -->
 </body>
 </html>
