--- a/jpashop/src/main/resources/templates/items/itemList.html
+++ b/jpashop/src/main/resources/templates/items/itemList.html
@@ -2,8 +2,10 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/header :: header" />
 <body>
-<div class="container">
+<div class="container col-5" style="text-align:center">
     <div th:replace="fragments/bodyHeader :: bodyHeader"/>
+    <H1>ITEM LIST</H1>
+    <br/>
     <div>
         <table class="table table-striped">
             <thead>
