--- a/jpashop/src/main/resources/templates/fragments/footer.html
+++ b/jpashop/src/main/resources/templates/fragments/footer.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <div class="footer" th:fragment="footer">
-    <p>&copy; Hello Shop V2</p>
+    <hr/>
+    <div style="text-align:left">&copy; Hello Shop V2</div>
 </div>
