--- a/jpashop/src/main/resources/templates/logins/loginForm.html
+++ b/jpashop/src/main/resources/templates/logins/loginForm.html
@@ -7,33 +7,42 @@
  }
 </style>
 <body>
-<div class="container">
-  <div th:replace="fragments/bodyHeader :: bodyHeader"/>
+<div class="row justify-content-center">
+  <div class="container col-5" style="text-align:center">
+    <div th:replace="fragments/bodyHeader :: bodyHeader"/>
+    <h1>LOGIN</h1>
+    <br/>
+    <form role="form" action="/login" th:object="${loginForm}" method="post">
+      <!-- EMAIL -->
+      <div class="form-floating mb-3">
+        <input type="text" th:field="*{email}" class="form-control"
+               placeholder="E-MAIL을 입력하세요"
+               th:class="${#fields.hasErrors('email')}? 'form-control fieldError' : 'form-control'">
+        <p th:if="${#fields.hasErrors('email')}"
+           th:errors="*{email}">Incorrect date</p>
+        <label>Email address</label>
+      </div>
+      <!-- PASSWORD -->
+      <div class="form-floating">
+        <input type="text" th:field="*{password}" class="form-control"
+               placeholder="PASSWORD를 입력하세요"
+               th:class="${#fields.hasErrors('password')}? 'form-control fieldError' : 'form-control'">
+        <p th:if="${#fields.hasErrors('password')}"
+           th:errors="*{password}">Incorrect date</p>
+        <label>Password</label>
+      </div>
 
-  <h1>LOGIN</h1>
+      <br/>
 
-  <form role="form" action="/login" th:object="${loginForm}" method="post">
-    <div class="form-group">
-      <label th:for="email">E-MAIL</label>
-      <input type="text" th:field="*{email}" class="form-control"
-             placeholder="E-MAIL을 입력하세요"
-             th:class="${#fields.hasErrors('email')}? 'form-control fieldError' : 'form-control'">
-      <p th:if="${#fields.hasErrors('email')}"
-         th:errors="*{email}">Incorrect date</p>
-    </div>
-    <div class="form-group">
-      <label th:for="password">PASSWORD</label>
-      <input type="text" th:field="*{password}" class="form-control"
-             placeholder="PASSWORD를 입력하세요"
-             th:class="${#fields.hasErrors('password')}? 'form-control fieldError' : 'form-control'">
-      <p th:if="${#fields.hasErrors('password')}"
-         th:errors="*{password}">Incorrect date</p>
-    </div>
-    <button type="submit" class="btn btn-primary">LOG IN</button>
-    <a href="/members/new" class="btn btn-primary">JOIN</a>
-  </form>
-  <br/>
-  <div th:replace="fragments/footer :: footer" />
-</div> <!-- /container -->
+      <div class="d-grid gap-2">
+        <button class="btn btn-outline-secondary" type="submit">LOG IN</button>
+        <a href="/members/new" class="btn btn-outline-secondary">JOIN</a>
+      </div>
+
+    </form>
+    <br/>
+    <div th:replace="fragments/footer :: footer" />
+  </div> <!-- /container -->
+</div>
 </body>
 </html>
