--- a/jpashop/src/main/resources/templates/members/createMemberForm.html
+++ b/jpashop/src/main/resources/templates/members/createMemberForm.html
@@ -7,52 +7,62 @@
  }
 </style>
 <body>
-<div class="container">
-    <div th:replace="fragments/bodyHeader :: bodyHeader"/>
-    <form role="form" action="/members/new" th:object="${memberForm}" method="post">
-        <div class="form-group">
-            <label th:for="email">E-MAIL</label>
-            <input type="text" th:field="*{email}" class="form-control"
-                   placeholder="E-MAIL을 입력하세요"
-                   th:class="${#fields.hasErrors('email')}? 'form-control fieldError' : 'form-control'">
-            <p th:if="${#fields.hasErrors('email')}"
-               th:errors="*{email}">Incorrect date</p>
-        </div>
-        <div class="form-group">
-            <label th:for="password">PASSWORD</label>
-            <input type="text" th:field="*{password}" class="form-control"
-                   placeholder="PASSWORD를 입력하세요"
-                   th:class="${#fields.hasErrors('password')}? 'form-control fieldError' : 'form-control'">
-            <p th:if="${#fields.hasErrors('password')}"
-               th:errors="*{password}">Incorrect date</p>
-        </div>
-        <div class="form-group">
-            <label th:for="name">이름</label>
-            <input type="text" th:field="*{name}" class="form-control"
-                   placeholder="이름을 입력하세요"
-                   th:class="${#fields.hasErrors('name')}? 'form-control fieldError' : 'form-control'">
-            <p th:if="${#fields.hasErrors('name')}"
-               th:errors="*{name}">Incorrect date</p>
-        </div>
-        <div class="form-group">
-            <label th:for="city">도시</label>
-            <input type="text" th:field="*{city}" class="form-control"
-                   placeholder="도시를 입력하세요">
-        </div>
-        <div class="form-group">
-            <label th:for="street">거리</label>
-            <input type="text" th:field="*{street}" class="form-control"
-                   placeholder="거리를 입력하세요">
-        </div>
-        <div class="form-group">
-            <label th:for="zipcode">우편번호</label>
-            <input type="text" th:field="*{zipcode}" class="form-control"
-                   placeholder="우편번호를 입력하세요">
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
-    <br/>
-    <div th:replace="fragments/footer :: footer" />
-</div> <!-- /container -->
+<div class="row justify-content-center">
+    <div class="container col-5" style="text-align:center">
+        <div th:replace="fragments/bodyHeader :: bodyHeader"/>
+        <h1>JOIN</h1>
+        <br/>
+        <form role="form" action="/members/new" th:object="${memberForm}" method="post">
+
+            <div class="form-floating mb-3">
+                <input type="text" th:field="*{email}" class="form-control"
+                       placeholder="E-MAIL을 입력하세요"
+                       th:class="${#fields.hasErrors('email')}? 'form-control fieldError' : 'form-control'">
+                <p th:if="${#fields.hasErrors('email')}"
+                   th:errors="*{email}">Incorrect date</p>
+                <label>Email address</label>
+            </div>
+
+            <div class="form-floating mb-3">
+                <input type="text" th:field="*{password}" class="form-control"
+                       placeholder="PASSWORD를 입력하세요"
+                       th:class="${#fields.hasErrors('password')}? 'form-control fieldError' : 'form-control'">
+                <p th:if="${#fields.hasErrors('password')}"
+                   th:errors="*{password}">Incorrect date</p>
+                <label>Password</label>
+            </div>
+
+            <div class="form-floating mb-3">
+                <input type="text" th:field="*{name}" class="form-control"
+                       placeholder="이름을 입력하세요"
+                       th:class="${#fields.hasErrors('name')}? 'form-control fieldError' : 'form-control'">
+                <p th:if="${#fields.hasErrors('name')}"
+                   th:errors="*{name}">Incorrect date</p>
+                <label>Name</label>
+            </div>
+
+            <div class="form-floating mb-3">
+                <input type="text" th:field="*{city}" class="form-control" placeholder="도시를 입력하세요">
+                <label>City</label>
+            </div>
+
+            <div class="form-floating mb-3">
+                <input type="text" th:field="*{street}" class="form-control" placeholder="거리를 입력하세요">
+                <label>Street</label>
+            </div>
+
+            <div class="form-floating mb-3">
+                <input type="text" th:field="*{zipcode}" class="form-control" placeholder="우편번호를 입력하세요">
+                <label>Zipcode</label>
+            </div>
+
+            <div class="d-grid gap-2">
+                <button type="submit" class="btn btn-outline-secondary">회원가입</button>
+            </div>
+        </form>
+
+        <div th:replace="fragments/footer :: footer" />
+    </div> <!-- /container -->
+</div>
 </body>
 </html>
