--- a/jpashop/src/main/resources/templates/members/memberList.html
+++ b/jpashop/src/main/resources/templates/members/memberList.html
@@ -2,16 +2,18 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/header :: header" />
 <body>
-<div class="container">
+<div class="container  col-5" style="text-align:center">
   <div th:replace="fragments/bodyHeader :: bodyHeader" />
-  <div style="text-align: center">
-    <table class="table table-striped">
+  <H1>MEMBER LIST</H1>
+  <br/>
+  <div style="text-align: center" >
+    <table class="table">
       <thead>
-      <tr>
-        <th>이름</th>
-        <th>도시</th>
-        <th>주소</th>
-        <th>우편번호</th>
+      <tr class="table-secondary">
+        <th class="col-3">이름</th>
+        <th class="col-3">도시</th>
+        <th class="col-3">주소</th>
+        <th class="col-3">우편번호</th>
       </tr>
       </thead>
       <tbody>
