--- a/jpashop/src/main/resources/templates/order/orderList.html
+++ b/jpashop/src/main/resources/templates/order/orderList.html
@@ -2,27 +2,34 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/header :: header"/>
 <body>
-<div class="container">
+<div class="container col-5" style="text-align:center">
     <div th:replace="fragments/bodyHeader :: bodyHeader"/>
+    <H1>ORDER LIST</H1>
+    <br/>
     <div>
-        <div>
-            <form th:object="${orderSearch}" class="form-inline">
-                <div class="form-group mb-2">
-                    <input type="text" th:field="*{memberName}" class="formcontrol" placeholder="회원명"/>
+        <div >
+            <form th:object="${orderSearch}" class="row g-3">
+                <div class="form-floating mb-3 col-sm-5">
+                    <input type="text" th:field="*{memberName}" class="form-control" placeholder="회원명"/>
+                    <label>회원명</label>
                 </div>
-                <div class="form-group mx-sm-1 mb-2">
-                    <select th:field="*{orderStatus}" class="form-control">
-                        <option value="">주문상태</option>
-                        <option th:each=
-                                        "status : ${T(jpabook.jpashop.domain.OrderStatus).values()}"
+
+                <div class="form-floating col-sm-5">
+                    <select th:field="*{orderStatus}" class="form-select" id="floatingSelect">
+                        <option value="">NONE</option>
+                        <option th:each="status : ${T(jpabook.jpashop.domain.OrderStatus).values()}"
                                 th:value="${status}"
                                 th:text="${status}">option
                         </option>
                     </select>
+                    <label for="floatingSelect">주문 상태</label>
                 </div>
-                <button type="submit" class="btn btn-primary mb-2">검색</button>
+
+                <button type="submit" class="btn btn-secondary mb-3 col-sm-2">검색</button>
             </form>
         </div>
+        <hr/>
+
         <table class="table table-striped">
             <thead>
             <tr>
@@ -55,7 +62,6 @@
                 </tr>
             </th:block>
             </tbody>
-
         </table>
     </div>
     <div th:replace="fragments/footer :: footer"/>
