--- a/jpashop/src/main/resources/templates/home.html
+++ b/jpashop/src/main/resources/templates/home.html
@@ -11,26 +11,26 @@
         <h1>HOME</h1>
         <div style="text-align:right">
             <form action="/logout" method="post">
-                <button type="submit" class="btn btn-outline-warning btn-sm">로그아웃</button>
+                <button type="submit" class="btn btn-outline-danger btn-sm">로그아웃</button>
             </form>
         </div>
         <hr/>
         <div class="row">
             <div class="col-sm-6">
-                <div class="card">
+                <div class="card" style="height:100%">
                     <div class="card-body">
                         <h5 class="card-title">회원 가입</h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                        <a href="/members/new" class="btn btn-primary">Go somewhere</a>
+                        <p class="card-text">회원을 등록하여 JPA SHOP의 서비스를 이용하세요.</p>
+                        <a href="/members/new" class="btn btn-secondary">회원 가입 바로가기</a>
                     </div>
                 </div>
             </div>
             <div class="col-sm-6">
-                <div class="card">
+                <div class="card" style="height:100%">
                     <div class="card-body">
                         <h5 class="card-title">회원 목록</h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                        <a href="/members" class="btn btn-primary">Go somewhere</a>
+                        <p class="card-text">현재 JPA SHOP 서비스에 등록된 모든 회원 목록을 제공합니다.</p>
+                        <a href="/members" class="btn btn-secondary">회원 목록 바로가기</a>
                     </div>
                 </div>
             </div>
@@ -38,20 +38,20 @@
         <br/>
         <div class="row">
             <div class="col-sm-6">
-                <div class="card">
+                <div class="card" style="height:100%">
                     <div class="card-body">
                         <h5 class="card-title">상품 등록</h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                        <a href="/items/new" class="btn btn-primary">Go somewhere</a>
+                        <p class="card-text">JPA SHOP 서비스에 판매할 상품을 등록합니다.</p>
+                        <a href="/items/new" class="btn btn-secondary">상품 등록 바로가기</a>
                     </div>
                 </div>
             </div>
             <div class="col-sm-6">
-                <div class="card">
+                <div class="card" style="height:100%">
                     <div class="card-body">
                         <h5 class="card-title">상품 목록</h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                        <a href="/items" class="btn btn-primary">Go somewhere</a>
+                        <p class="card-text">현재 JPA SHOP 서비스에 등록된 모든 상품 목록을 제공합니다.</p>
+                        <a href="/items" class="btn btn-secondary">상품 목록 바로가기</a>
                     </div>
                 </div>
             </div>
@@ -59,20 +59,20 @@
         <br/>
         <div class="row">
             <div class="col-sm-6">
-                <div class="card">
+                <div class="card" style="height:100%">
                     <div class="card-body">
                         <h5 class="card-title">상품 주문</h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                        <a href="/order" class="btn btn-primary">Go somewhere</a>
+                        <p class="card-text">현재 JPA SHOP 서비스에 등록된 상품을 주문합니다.</p>
+                        <a href="/order" class="btn btn-secondary">상품 주문 바로가기</a>
                     </div>
                 </div>
             </div>
             <div class="col-sm-6">
-                <div class="card">
+                <div class="card" style="height:100%">
                     <div class="card-body">
                         <h5 class="card-title">주문 목록</h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                        <a href="/orders" class="btn btn-primary">Go somewhere</a>
+                        <p class="card-text">현재 JPA SHOP 서비스에서 주문된 모든 주문 목록을 제공합니다.</p>
+                        <a href="/orders" class="btn btn-secondary">주문 목록 바로가기</a>
                     </div>
                 </div>
             </div>
