--- a/jpashop/src/main/resources/templates/order/orderForm.html
+++ b/jpashop/src/main/resources/templates/order/orderForm.html
@@ -2,32 +2,30 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/header :: header" />
 <body>
-<div class="container">
+<div class="container col-5" style="text-align:center">
     <div th:replace="fragments/bodyHeader :: bodyHeader"/>
+    <h1>상품 주문</h1>
+    <br/>
     <form role="form" action="/order" method="post">
-        <div class="form-group">
-            <label for="member">주문회원</label>
-            <select name="memberId" id="member" class="form-control">
-                <option value="">회원선택</option>
-                <option th:each="member : ${members}"
-                        th:value="${member.id}"
-                        th:text="${member.username}" />
-            </select>
-        </div>
-        <div class="form-group">
-            <label for="item">상품명</label>
+
+        <div class="form-floating mb-3">
             <select name="itemId" id="item" class="form-control">
-                <option value="">상품선택</option>
+                <option value=""></option>
                 <option th:each="item : ${items}"
                         th:value="${item.id}"
                         th:text="${item.name}" />
             </select>
+            <label for="item">상품명</label>
         </div>
-        <div class="form-group">
-            <label for="count">주문수량</label>
+
+        <div class="form-floating mb-3">
             <input type="number" name="count" class="form-control" id="count" placeholder="주문 수량을 입력하세요">
+            <label for="count">주문 수량</label>
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+
+        <div class="d-grid gap-2">
+            <button type="submit" class="btn btn-outline-secondary">주문하기</button>
+        </div>
     </form>
     <br/>
     <div th:replace="fragments/footer :: footer" />
