--- a/jpashop/src/main/resources/templates/order/orderList.html
+++ b/jpashop/src/main/resources/templates/order/orderList.html
@@ -30,14 +30,14 @@
         </div>
         <hr/>
 
-        <table class="table table-striped">
+        <table class="table">
             <thead>
-            <tr>
+            <tr class="table-secondary">
                 <th>#</th>
                 <th>회원명</th>
                 <th>상품 이름</th>
-                <th>상품 주문가격</th>
-                <th>상품 주문수량</th>
+                <th>주문가격</th>
+                <th>주문수량</th>
                 <th>상태</th>
                 <th>일시</th>
                 <th></th>
@@ -57,7 +57,7 @@
                     <td>
                         <a th:if="${order.status.name() == 'ORDER'}" href="#"
                            th:href="'javascript:cancel('+${order.id}+')'"
-                           class="btn btn-danger">CANCEL</a>
+                           class="btn btn-outline-danger btn-sm">CC</a>
                     </td>
                 </tr>
             </th:block>
