[UPDATE] 업데이트 쿼리 개선

--- a/jpashop/src/main/resources/templates/home.html
+++ b/jpashop/src/main/resources/templates/home.html
@@ -19,9 +19,9 @@
             <div class="col-sm-6">
                 <div class="card" style="height:100%">
                     <div class="card-body">
-                        <h5 class="card-title">회원 가입</h5>
-                        <p class="card-text">회원을 등록하여 JPA SHOP의 서비스를 이용하세요.</p>
-                        <a href="/members/new" class="btn btn-secondary">회원 가입 바로가기</a>
+                        <h5 class="card-title">회원 정보</h5>
+                        <p class="card-text">현재 로그인한 회원의 정보를 확인하거나 수정할 수 있습니다.</p>
+                        <a href="/member/info" class="btn btn-secondary">회원 정보 바로가기</a>
                     </div>
                 </div>
             </div>
