--- a/jpashop/src/main/resources/templates/items/createItemForm.html
+++ b/jpashop/src/main/resources/templates/items/createItemForm.html
@@ -2,10 +2,11 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/header :: header" />
 <body>
-<div class="container col-5">
-  <h1></h1>
-  <div th:replace="fragments/bodyHeader :: bodyHeader"/>
+<div class="container col-5" style="text-align:center">
 
+  <div th:replace="fragments/bodyHeader :: bodyHeader"/>
+  <h1>REGISTER ITEM</h1>
+  <br/>
   <div class="accordion" id="accordionExample">
     <div class="accordion-item">
       <h2 class="accordion-header" id="headingOne">
