--- a/jpashop/src/main/resources/templates/order/orderForm.html
+++ b/jpashop/src/main/resources/templates/order/orderForm.html
@@ -4,7 +4,7 @@
 <body>
 <div class="container col-5" style="text-align:center">
     <div th:replace="fragments/bodyHeader :: bodyHeader"/>
-    <h1>상품 주문</h1>
+    <h1>ORDER ITEM</h1>
     <br/>
     <form role="form" action="/order" method="post">
 
