[UPDATE] 상속 클래스 형성 적용 개선

--- a/jpashop/src/main/resources/templates/items/itemList.html
+++ b/jpashop/src/main/resources/templates/items/itemList.html
@@ -26,7 +26,8 @@
                 <td th:text="${item.stockQuantity}"></td>
                 <td>
                     <a href="#" th:href="@{/items/{id}/edit (id=${item.id})}"
-                       class="btn btn-outline-danger btn-sm" role="button">수정</a>
+                       class="btn btn-outline-danger btn-sm" role="button"
+                       th:if="${item.memberId == memberId}">수정</a>
                 </td>
             </tr>
             </tbody>
