[UPDATE] SHOPPING CART 기능 추가(1)

--- a/jpashop/src/main/resources/templates/items/itemCardList.html
+++ b/jpashop/src/main/resources/templates/items/itemCardList.html
@@ -18,7 +18,7 @@
         <div class="form-floating col-sm-5">
           <select th:field="*{itemType}" class="form-select" id="floatingSelect">
             <option value="">NONE</option>
-            <option th:each="type : ${T(jpabook.jpashop.domain.ItemType).values()}"
+            <option th:each="type : ${T(jpabook.jpashop.domain.item.ItemType).values()}"
                     th:value="${type}"
                     th:text="${type}">option
             </option>
