--- a/jpashop/src/main/resources/templates/items/itemMoreInfo.html
+++ b/jpashop/src/main/resources/templates/items/itemMoreInfo.html
@@ -78,7 +78,7 @@
                     <button class="btn btn-outline-secondary" type="submit" formaction="/order">주문하기</button>
                 </div>
                 <div class="col-6 d-grid gap-2">
-                    <button class="btn btn-outline-secondary" type="submit" formaction="/">장바구니에 담기</button>
+                    <button class="btn btn-outline-secondary" type="submit" formaction="/addItem">장바구니에 담기</button>
                 </div>
             </div>
         </form>
