--- a/jpashop/src/main/resources/templates/home.html
+++ b/jpashop/src/main/resources/templates/home.html
@@ -61,9 +61,9 @@
             <div class="col-sm-6">
                 <div class="card" style="height:100%">
                     <div class="card-body">
-                        <h5 class="card-title">상품 주문</h5>
-                        <p class="card-text">현재 JPA SHOP 서비스에 등록된 상품을 주문합니다.</p>
-                        <a href="/order" class="btn btn-secondary">상품 주문 바로가기</a>
+                        <h5 class="card-title">장바구니</h5>
+                        <p class="card-text">장바구니에 등록된 상품 목록을 제공합니다.</p>
+                        <a href="/cartItems" class="btn btn-secondary">장바구니 바로가기</a>
                     </div>
                 </div>
             </div>
