[UPDATE] @OneToOne 양방향 매핑 관계 지연 로딩 미적용 문제 해결

--- a/jpashop/src/main/resources/templates/items/itemCardList.html
+++ b/jpashop/src/main/resources/templates/items/itemCardList.html
@@ -23,7 +23,7 @@
                     th:text="${type}">option
             </option>
           </select>
-          <label for="floatingSelect">주문 상태</label>
+          <label for="floatingSelect">상품 타입</label>
         </div>
 
         <button type="submit" class="btn btn-secondary mb-3 col-sm-2">검색</button>
